[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/gui/mainmenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://nodes/controls/Controls.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/dynamicfonts/titlefont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/dynamicfonts/buttonsfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/dynamicfonts/textfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://nodes/gui/menu.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0627451, 0.14902, 1 )

[node name="Controls" parent="." instance=ExtResource( 2 )]

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 20.0
margin_right = -60.0
margin_bottom = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_right = 680.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 364.0
margin_bottom = 560.0

[node name="TitleContainer" type="CenterContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="Margin/HBoxContainer/VBoxContainer/TitleContainer"]
margin_top = 75.0
margin_right = 364.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 3 )
text = "VideoGame Name"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 364.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 419.0
margin_right = 364.0
margin_bottom = 535.0

[node name="ButtonsContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 103.0
margin_bottom = 116.0
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer/ButtonsContainer"]
margin_right = 103.0
margin_bottom = 36.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.117647, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0, 0.588235, 1 )
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Start"
flat = true

[node name="SettingsButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer/ButtonsContainer"]
margin_top = 40.0
margin_right = 103.0
margin_bottom = 76.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.117647, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0, 0.588235, 1 )
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="ExitButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer/ButtonsContainer"]
margin_top = 80.0
margin_right = 103.0
margin_bottom = 116.0
focus_mode = 0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Exit"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 107.0
margin_bottom = 116.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 3.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 43.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )

[node name="Label3" type="Label" parent="Margin/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )

[node name="Control" parent="Margin/HBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_left = -60.0
margin_top = -20.0
margin_right = -60.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 499.0
margin_right = 364.0
margin_bottom = 535.0

[node name="BackButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 36.0
focus_mode = 0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Back"
flat = true
align = 0

[node name="CenterContainer" type="CenterContainer" parent="Margin/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 399.0
margin_right = 364.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 539.0
margin_right = 364.0
margin_bottom = 560.0

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/TextContainer"]
margin_right = 364.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "Alpha v0.0.1"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_left = 368.0
margin_right = 680.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Margin/HBoxContainer/VBoxContainer2"]
margin_right = 312.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer2"]
margin_top = 539.0
margin_right = 312.0
margin_bottom = 560.0

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer2/TextContainer"]
margin_right = 312.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "Hello World"
align = 2

[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/HBoxContainer/ButtonsContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/HBoxContainer/ButtonsContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/HBoxContainer/ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
